--- a/configuration/lora-gateway-bridge/lora-gateway-bridge.toml
+++ b/configuration/lora-gateway-bridge/lora-gateway-bridge.toml
@@ -1,7 +1,7 @@
 # See https://www.loraserver.io/lora-gateway-bridge/install/config/ for a full
 # configuration example and documentation.
 
-[backend.mqtt]
+[integration.mqtt.auth.generic]
 server="tcp://mosquitto:1883"
 username=""
 password=""
