--- a/docker-compose-env.yml
+++ b/docker-compose-env.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   loraserver:
-    image: loraserver/loraserver:2
+    image: loraserver/loraserver:3
     environment:
       - POSTGRESQL.DSN=postgres://loraserver_ns:loraserver_ns@postgresql/loraserver_ns?sslmode=disable
       - REDIS.URL=redis://redis:6379
@@ -12,7 +12,7 @@ services:
       - GEOLOCATION_SERVER.SERVER=geoserver:8005
 
   appserver:
-    image: loraserver/lora-app-server:2
+    image: loraserver/lora-app-server:3
     ports:
       - 8080:8080
     environment:
@@ -23,14 +23,14 @@ services:
       - APPLICATION_SERVER.EXTERNAL_API.JWT_SECRET=verysecret
 
   gatewaybridge:
-    image: loraserver/lora-gateway-bridge:2
+    image: loraserver/lora-gateway-bridge:3
     ports:
       - 1700:1700/udp
     environment:
-      - BACKEND.MQTT.AUTH.GENERIC.SERVER=tcp://mosquitto:1883
+      - INTEGRATION.MQTT.AUTH.GENERIC.SERVER=tcp://mosquitto:1883
 
   geoserver:
-    image: loraserver/lora-geo-server:2
+    image: loraserver/lora-geo-server:3
     environment:
       - GEO_SERVER.BACKEND.NAME=collos
 
@@ -41,7 +41,7 @@ services:
       - postgresqldata:/var/lib/postgresql/data
 
   redis:
-    image: redis:4-alpine
+    image: redis:5-alpine
     volumes:
       - redisdata:/data
 
