--- a/configuration/lora-gateway-bridge/lora-gateway-bridge.toml
+++ b/configuration/lora-gateway-bridge/lora-gateway-bridge.toml
@@ -1,6 +1,25 @@
 # See https://www.loraserver.io/lora-gateway-bridge/install/config/ for a full
 # configuration example and documentation.
 
+[backend]
+type="basic_station"
+
+  [backend.basic_station]
+  bind=":3001"
+  read_timeout="1h"
+  region="US915"
+  frequency_min=902000000
+  frequency_max=928000000
+
+    [backend.basic_station.filters]
+    net_ids=[
+      "000000",
+    ]
+
+    join_euis=[
+      ["0000000000000000", "ffffffffffffffff"],
+    ]
+
 [integration.mqtt.auth.generic]
 server="tcp://mosquitto:1883"
 username=""
