--- a/configuration/loraserver/loraserver.toml
+++ b/configuration/loraserver/loraserver.toml
@@ -1,7 +1,7 @@
 # See https://www.loraserver.io/loraserver/install/config/ for a full
 # configuration example and documentation.
 #
-# This file is for the EU868 band. See the examples/ folder for more
+# This file is for the US915 band (channels 0-7). See the examples/ folder for more
 # configuration examples.
 
 [postgresql]
@@ -14,34 +14,10 @@ url="redis://redis:6379"
 net_id="000000"
 
 [network_server.band]
-name="EU_863_870"
+name="US_902_928"
 
-[network_server.network_settings]
-
-  [[network_server.network_settings.extra_channels]]
-  frequency=867100000
-  min_dr=0
-  max_dr=5
-
-  [[network_server.network_settings.extra_channels]]
-  frequency=867300000
-  min_dr=0
-  max_dr=5
-
-  [[network_server.network_settings.extra_channels]]
-  frequency=867500000
-  min_dr=0
-  max_dr=5
-
-  [[network_server.network_settings.extra_channels]]
-  frequency=867700000
-  min_dr=0
-  max_dr=5
-
-  [[network_server.network_settings.extra_channels]]
-  frequency=867900000
-  min_dr=0
-  max_dr=5
+  [network_server.network_settings]
+  enabled_uplink_channels=[0, 1, 2, 3, 4, 5, 6, 7]
 
 [network_server.gateway.backend.mqtt]
 server="tcp://mosquitto:1883"
@@ -51,3 +27,4 @@ server="http://appserver:8003"
 
 [geolocation_server]
 server="geoserver:8005"
+
