--- a/configuration/chirpstack-network-server/examples/chirpstack-network-server.us915.1.toml
+++ b/configuration/chirpstack-network-server/examples/chirpstack-network-server.us915.1.toml
@@ -1,4 +1,4 @@
-# See https://www.loraserver.io/loraserver/install/config/ for a full
+# See https://www.chirpstack.io/network-server/install/config/ for a full
 # configuration example and documentation.
 #
 # This file is for the US915 band (channels 8-15). See the examples/ folder for more
@@ -7,7 +7,7 @@
 # Note: these channels are also used by TTN.
 
 [postgresql]
-dsn="postgres://loraserver_ns:loraserver_ns@postgresql/loraserver_ns?sslmode=disable"
+dsn="postgres://chirpstack_ns:chirpstack_ns@postgresql/chirpstack_ns?sslmode=disable"
 
 [redis]
 url="redis://redis:6379"
@@ -25,8 +25,7 @@ name="US_902_928"
 server="tcp://mosquitto:1883"
 
 [join_server.default]
-server="http://appserver:8003"
+server="http://chirpstack-application-server:8003"
 
 [geolocation_server]
-server="geoserver:8005"
-
+server="chirpstack-geolocation-server:8005"
