--- a/docker-compose-env.yml
+++ b/docker-compose-env.yml
@@ -1,36 +1,36 @@
 version: "3"
 
 services:
-  loraserver:
-    image: loraserver/loraserver:3
+  chirpstack-network-server:
+    image: chirpstack/chirpstack-network-server:3
     environment:
-      - POSTGRESQL.DSN=postgres://loraserver_ns:loraserver_ns@postgresql/loraserver_ns?sslmode=disable
+      - POSTGRESQL.DSN=postgres://chirpstack_ns:chirpstack_ns@postgresql/chirpstack_ns?sslmode=disable
       - REDIS.URL=redis://redis:6379
       - NETWORK_SERVER.BAND.NAME=EU_863_870
       - NETWORK_SERVER.GATEWAY.BACKEND.MQTT.SERVER=tcp://mosquitto:1883
-      - JOIN_SERVER.DEFAULT.SERVER=http://appserver:8003
-      - GEOLOCATION_SERVER.SERVER=geoserver:8005
+      - JOIN_SERVER.DEFAULT.SERVER=http://chirpstack-application-server:8003
+      - GEOLOCATION_SERVER.SERVER=chirpstack-geolocation-server:8005
 
-  appserver:
-    image: loraserver/lora-app-server:3
+  chirpstack-application-server:
+    image: chirpstack/chirpstack-application-server:3
     ports:
       - 8080:8080
     environment:
-      - POSTGRESQL.DSN=postgres://loraserver_as:loraserver_as@postgresql/loraserver_as?sslmode=disable
+      - POSTGRESQL.DSN=postgres://chirpstack_as:chirpstack_as@postgresql/chirpstack_as?sslmode=disable
       - REDIS.URL=redis://redis:6379
       - APPLICATION_SERVER.INTEGRATION.MQTT.SERVER=tcp://mosquitto:1883
-      - APPLICATION_SERVER.API.PUBLIC_HOST=appserver:8001
+      - APPLICATION_SERVER.API.PUBLIC_HOST=chirpstack-application-server:8001
       - APPLICATION_SERVER.EXTERNAL_API.JWT_SECRET=verysecret
 
-  gatewaybridge:
-    image: loraserver/lora-gateway-bridge:3
+  chirpstack-gateway-bridge:
+    image: chirpstack/chirpstack-gateway-bridge:3
     ports:
       - 1700:1700/udp
     environment:
       - INTEGRATION.MQTT.AUTH.GENERIC.SERVER=tcp://mosquitto:1883
 
-  geoserver:
-    image: loraserver/lora-geo-server:3
+  chirpstack-geolocation-server:
+    image: chirpstack/chirpstack-geolocation-server:3
     environment:
       - GEO_SERVER.BACKEND.NAME=collos
 
