--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,29 @@
 version: "3"
 
 services:
-  loraserver:
-    image: loraserver/loraserver:3
+  chirpstack-network-server:
+    image: chirpstack/chirpstack-network-server:3
     volumes:
-      - ./configuration/loraserver:/etc/loraserver
+      - ./configuration/chirpstack-network-server:/etc/chirpstack-network-server
 
-  appserver:
-    image: loraserver/lora-app-server:3
+  chirpstack-application-server:
+    image: chirpstack/chirpstack-application-server:3
     ports:
       - 8080:8080
     volumes:
-      - ./configuration/lora-app-server:/etc/lora-app-server
+      - ./configuration/chirpstack-application-server:/etc/chirpstack-application-server
 
-  gatewaybridge:
-    image: loraserver/lora-gateway-bridge:3
+  chirpstack-gateway-bridge:
+    image: chirpstack/chirpstack-gateway-bridge:3
     ports:
       - 1700:1700/udp
     volumes:
-      - ./configuration/lora-gateway-bridge:/etc/lora-gateway-bridge
+      - ./configuration/chirpstack-gateway-bridge:/etc/chirpstack-gateway-bridge
 
-  geoserver:
-    image: loraserver/lora-geo-server:3
+  chirpstack-geolocation-server:
+    image: chirpstack/chirpstack-geolocation-server:3
     volumes:
-      - ./configuration/lora-geo-server:/etc/lora-geo-server
+      - ./configuration/chirpstack-geolocation-server:/etc/chirpstack-geolocation-server
 
   postgresql:
     image: postgres:9.6-alpine
