[Integration] Plugin Mosquitto Go Auth
Based on MQTT authentication & authorization ChirpStack guide (https://www.chirpstack.io/guides/mqtt-authentication/) and using iegomez's image (here is their GitHub: https://github.com/iegomez/mosquitto-go-auth)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,11 @@ services:
       - redisdata:/data
 
   mosquitto:
-    image: eclipse-mosquitto
+    image: iegomez/mosquitto-go-auth:0.5.0
     ports:
       - 1883:1883
+    volumes:
+      - ./configuration/mosquitto:/etc/mosquitto 
 
 volumes:
   postgresqldata:
