Change ISM channel plan band to common name.
Signed-off-by: Kiara Navarro <sophiekovalevsky@fedoraproject.org>

--- a/configuration/chirpstack-network-server/chirpstack-network-server.toml
+++ b/configuration/chirpstack-network-server/chirpstack-network-server.toml
@@ -14,7 +14,7 @@ url="redis://redis:6379"
 net_id="000000"
 
 [network_server.band]
-name="EU_863_870"
+name="EU868"
 
 [network_server.network_settings]
 
