--- a/configuration/chirpstack-network-server/examples/chirpstack-network-server.us915.0.toml
+++ b/configuration/chirpstack-network-server/examples/chirpstack-network-server.us915.0.toml
@@ -14,7 +14,7 @@ url="redis://redis:6379"
 net_id="000000"
 
 [network_server.band]
-name="US_902_928"
+name="US915"
 
   [network_server.network_settings]
   enabled_uplink_channels=[0, 1, 2, 3, 4, 5, 6, 7]
