--- a/configuration/chirpstack-network-server/examples/chirpstack-network-server.us915.1.toml
+++ b/configuration/chirpstack-network-server/examples/chirpstack-network-server.us915.1.toml
@@ -16,7 +16,7 @@ url="redis://redis:6379"
 net_id="000000"
 
 [network_server.band]
-name="US_902_928"
+name="US915"
 
   [network_server.network_settings]
   enabled_uplink_channels=[8, 9, 10, 11, 12, 13, 14, 15]
