Pin Mosquitto to v1.6.

--- a/docker-compose-env.yml
+++ b/docker-compose-env.yml
@@ -48,7 +48,7 @@ services:
       - redisdata:/data
 
   mosquitto:
-    image: eclipse-mosquitto
+    image: eclipse-mosquitto:1.6
     ports:
       - 1883:1883
 
