--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,11 @@ services:
       - redisdata:/data
 
   mosquitto:
-    image: eclipse-mosquitto:1.6
+    image: eclipse-mosquitto:2
     ports:
       - 1883:1883
+    volumes: 
+      - ./configuration/eclipse-mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
 
 volumes:
   postgresqldata:
