--- a/configuration/chirpstack-network-server/examples/chirpstack-network-server.us915.1.toml
+++ b/configuration/chirpstack-network-server/examples/chirpstack-network-server.us915.1.toml
@@ -19,7 +19,7 @@ net_id="000000"
 name="US915"
 
   [network_server.network_settings]
-  enabled_uplink_channels=[8, 9, 10, 11, 12, 13, 14, 15]
+  enabled_uplink_channels=[8, 9, 10, 11, 12, 13, 14, 15, 65]
 
 [network_server.gateway.backend.mqtt]
 server="tcp://mosquitto:1883"
