--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,20 @@
 version: "3"
 
 services:
-  chirpstack-network-server:
-    image: chirpstack/chirpstack-network-server:3
+  chirpstack:
+    image: chirpstack/chirpstack:4.0.0-test.1
+    command: -c /etc/chirpstack
+    restart: unless-stopped
     volumes:
-      - ./configuration/chirpstack-network-server:/etc/chirpstack-network-server
+      - ./configuration/chirpstack:/etc/chirpstack
     depends_on:
-      - postgresql
+      - postgres
       - mosquitto
-
-  chirpstack-application-server:
-    image: chirpstack/chirpstack-application-server:3
+      - redis
     ports:
       - 8080:8080
-    volumes:
-      - ./configuration/chirpstack-application-server:/etc/chirpstack-application-server
-    depends_on:
-      - chirpstack-network-server
 
-  chirpstack-gateway-bridge:
+  chirpstack-gateway-bridge-eu868:
     image: chirpstack/chirpstack-gateway-bridge:3
     ports:
       - 1700:1700/udp
@@ -27,16 +23,16 @@ services:
     depends_on: 
       - mosquitto
 
-  postgresql:
-    image: postgres:9.6-alpine
-    environment:
-      - POSTGRES_PASSWORD=root
+  postgres:
+    image: postgres:11-alpine
     volumes:
       - ./configuration/postgresql/initdb:/docker-entrypoint-initdb.d
       - postgresqldata:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=root
 
   redis:
-    image: redis:5-alpine
+    image: redis:6-alpine
     volumes:
       - redisdata:/data
 
