--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: "3"
 
 services:
   chirpstack:
-    image: chirpstack/chirpstack:4.0.0-test.5
+    image: chirpstack/chirpstack:4.0.0-test.7
     command: -c /etc/chirpstack
     restart: unless-stopped
     volumes:
       - ./configuration/chirpstack:/etc/chirpstack
+      - ./lorawan-devices:/opt/lorawan-devices
     depends_on:
       - postgres
       - mosquitto
