--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - 8080:8080
 
   chirpstack-gateway-bridge-eu868:
-    image: chirpstack/chirpstack-gateway-bridge:3.14.2
+    image: chirpstack/chirpstack-gateway-bridge:4.0.0-test.1
     ports:
       - 1700:1700/udp
     volumes:
