--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   chirpstack:
-    image: chirpstack/chirpstack:4.0.0-test.16
+    image: chirpstack/chirpstack:4.0.0-rc.1
     command: -c /etc/chirpstack
     restart: unless-stopped
     volumes:
@@ -16,7 +16,7 @@ services:
       - 8080:8080
 
   chirpstack-gateway-bridge-eu868:
-    image: chirpstack/chirpstack-gateway-bridge:4.0.0-test.1
+    image: chirpstack/chirpstack-gateway-bridge:4.0.0-rc.1
     ports:
       - 1700:1700/udp
     volumes:
