Update tags to v4.0.0.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   chirpstack:
-    image: chirpstack/chirpstack:4.0.0-rc.3
+    image: chirpstack/chirpstack:4.0.0
     command: -c /etc/chirpstack
     restart: unless-stopped
     volumes:
@@ -20,7 +20,7 @@ services:
       - 8080:8080
 
   chirpstack-gateway-bridge-eu868:
-    image: chirpstack/chirpstack-gateway-bridge:4.0.0-rc.1
+    image: chirpstack/chirpstack-gateway-bridge:4.0.0
     ports:
       - 1700:1700/udp
     volumes:
@@ -29,7 +29,7 @@ services:
       - mosquitto
 
   chirpstack-rest-api:
-    image: chirpstack/chirpstack-rest-api:4.0.0-rc.1
+    image: chirpstack/chirpstack-rest-api:4.0.0
     command: --server chirpstack:8080 --bind 0.0.0.0:8090 --insecure
     ports:
       - 8090:8090
