--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
 
   chirpstack-gateway-bridge-eu868:
     image: chirpstack/chirpstack-gateway-bridge:4.0.0
+    restart: unless-stopped
     ports:
       - 1700:1700/udp
     volumes:
@@ -30,6 +31,7 @@ services:
 
   chirpstack-rest-api:
     image: chirpstack/chirpstack-rest-api:4.0.0
+    restart: unless-stopped
     command: --server chirpstack:8080 --bind 0.0.0.0:8090 --insecure
     ports:
       - 8090:8090
@@ -38,6 +40,7 @@ services:
 
   postgres:
     image: postgres:14-alpine
+    restart: unless-stopped
     volumes:
       - ./configuration/postgresql/initdb:/docker-entrypoint-initdb.d
       - postgresqldata:/var/lib/postgresql/data
@@ -46,6 +49,7 @@ services:
 
   redis:
     image: redis:7-alpine
+    restart: unless-stopped
     volumes:
       - redisdata:/data
 
