--- a/configuration/chirpstack-gateway-bridge/chirpstack-gateway-bridge.toml
+++ b/configuration/chirpstack-gateway-bridge/chirpstack-gateway-bridge.toml
@@ -7,6 +7,6 @@ username=""
 password=""
 
 [integration.mqtt]
-event_topic_template="eu868/gateway/{{ .GatewayID }}/event/{{ .EventType }}"
-state_topic_template="eu868/gateway/{{ .GatewayID }}/state/{{ .StateType }}"
-command_topic_template="eu868/gateway/{{ .GatewayID }}/command/#"
+event_topic_template="gateway/{{ .GatewayID }}/event/{{ .EventType }}"
+state_topic_template="gateway/{{ .GatewayID }}/state/{{ .StateType }}"
+command_topic_template="gateway/{{ .GatewayID }}/command/#"
