--- a/configuration/chirpstack/chirpstack.toml
+++ b/configuration/chirpstack/chirpstack.toml
@@ -68,7 +68,18 @@
     "as923",
     "as923_2",
     "as923_3",
-    "as923_4"
+    "as923_4",
+    "au915_0",
+    "cn470_10",
+    "cn779",
+    "eu433",
+    "eu868",
+    "in865",
+    "ism2400",
+    "kr920",
+    "ru864",
+    "us915_0",
+    "us915_1",
   ]
 
 
