--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,8 @@ services:
       - AWS_CONTAINER_AUTHORIZATION_TOKEN
       - AWS_CONTAINER_CREDENTIALS_FULL_URI
       - AWS_IOT_THING_NAME
+    volumes:
+      - /greengrass/v2:/greengrass/v2
 
 volumes:
   postgresqldata:
