--- a/forwarder/Dockerfile
+++ b/forwarder/Dockerfile
@@ -4,7 +4,7 @@ COPY requirements.txt ./
 RUN apt-get update && apt-get install -y cmake
 RUN pip install -r ./requirements.txt
 
-# COPY app.py ./
+COPY app.py ./
 
 CMD ["python", "app.py"]
 
