Add MQTT topic config to Basics Station config.

--- a/configuration/chirpstack-gateway-bridge/chirpstack-gateway-bridge-basicstation-as923_4.toml
+++ b/configuration/chirpstack-gateway-bridge/chirpstack-gateway-bridge-basicstation-as923_4.toml
@@ -6,6 +6,11 @@ servers=["tcp://mosquitto:1883"]
 username=""
 password=""
 
+[integration.mqtt]
+event_topic_template="as923_4/gateway/{{ .GatewayID }}/event/{{ .EventType }}"
+state_topic_template="as923_4/gateway/{{ .GatewayID }}/state/{{ .StateType }}"
+command_topic_template="as923_4/gateway/{{ .GatewayID }}/command/#"
+
 [backend]
 type="basic_station"
 
