Mount mosquitto config dir not only config file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
     ports:
       - 1883:1883
     volumes: 
-      - ./configuration/mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
+      - ./configuration/mosquitto/config/:/mosquitto/config/
 
 volumes:
   postgresqldata:
