--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,24 @@
 services:
   chirpstack:
     image: chirpstack/chirpstack:4
+    hostname: ${CHIRPSTACK_HOSTNAME}
     command: -c /etc/chirpstack
     restart: unless-stopped
+    env_file:
+      - .env
     volumes:
       - ./configuration/chirpstack:/etc/chirpstack
+      - ./rds-combined-ca-bundle.pem:/certs/rds-combined-ca-bundle.pem:ro
     depends_on:
-      - postgres
       - mosquitto
-      - redis
     environment:
       - MQTT_BROKER_HOST=mosquitto
-      - REDIS_HOST=redis
-      - POSTGRESQL_HOST=postgres
+      - AWS__IOT__ENDPOINT=${AWS_IOT_ENDPOINT}
+      - CHIRPSTACK__HOSTNAME=${CHIRPSTACK_HOSTNAME}
+      - CHIRPSTACK__ENVIRONMENT=${CHIRPSTACK_ENVIRONMENT}
+      - POSTGRESQL__DSN=${POSTGRES_DSN}
+      - POSTGRESQL__CA__CERT=${POSTGRESQL_CA_CERT}
+      - REDIS__SERVER=${REDIS_SERVER}
     ports:
       - "8080:8080"
 
@@ -24,12 +30,12 @@ services:
     volumes:
       - ./configuration/chirpstack-gateway-bridge:/etc/chirpstack-gateway-bridge
     environment:
-      - INTEGRATION__MQTT__EVENT_TOPIC_TEMPLATE=eu868/gateway/{{ .GatewayID }}/event/{{ .EventType }}
-      - INTEGRATION__MQTT__STATE_TOPIC_TEMPLATE=eu868/gateway/{{ .GatewayID }}/state/{{ .StateType }}
-      - INTEGRATION__MQTT__COMMAND_TOPIC_TEMPLATE=eu868/gateway/{{ .GatewayID }}/command/#
+      - INTEGRATION__MQTT__EVENT_TOPIC_TEMPLATE=${CHIRPSTACK__ENVIRONMENT}/eu868/gateway/{{ .GatewayID }}/event/{{ .EventType }}
+      - INTEGRATION__MQTT__STATE_TOPIC_TEMPLATE=${CHIRPSTACK__ENVIRONMENT}/eu868/gateway/{{ .GatewayID }}/state/{{ .StateType }}
+      - INTEGRATION__MQTT__COMMAND_TOPIC_TEMPLATE=$share/${CHIRPSTACK__ENVIRONMENT}-gbgrp/${CHIRPSTACK__ENVIRONMENT}/eu868/gateway/{{ .GatewayID }}/command/#
     depends_on:
       - mosquitto
-  
+
   chirpstack-gateway-bridge-basicstation:
     image: chirpstack/chirpstack-gateway-bridge:4
     restart: unless-stopped
@@ -50,32 +56,10 @@ services:
     depends_on:
       - chirpstack
 
-  postgres:
-    image: postgres:14-alpine
-    restart: unless-stopped
-    volumes:
-      - ./configuration/postgresql/initdb:/docker-entrypoint-initdb.d
-      - postgresqldata:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_USER=chirpstack
-      - POSTGRES_PASSWORD=chirpstack
-      - POSTGRES_DB=chirpstack
-
-  redis:
-    image: redis:7-alpine
-    restart: unless-stopped
-    command: redis-server --save 300 1 --save 60 100 --appendonly no
-    volumes:
-      - redisdata:/data
-
   mosquitto:
     image: eclipse-mosquitto:2
     restart: unless-stopped
     ports:
       - "1883:1883"
-    volumes: 
+    volumes:
       - ./configuration/mosquitto/config/:/mosquitto/config/
-
-volumes:
-  postgresqldata:
-  redisdata:
