--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,13 @@ services:
     volumes:
       - ./configuration/chirpstack-gateway-bridge:/etc/chirpstack-gateway-bridge
     environment:
-      - INTEGRATION__MQTT__EVENT_TOPIC_TEMPLATE=${CHIRPSTACK__ENVIRONMENT}/eu868/gateway/{{ .GatewayID }}/event/{{ .EventType }}
-      - INTEGRATION__MQTT__STATE_TOPIC_TEMPLATE=${CHIRPSTACK__ENVIRONMENT}/eu868/gateway/{{ .GatewayID }}/state/{{ .StateType }}
-      - INTEGRATION__MQTT__COMMAND_TOPIC_TEMPLATE=$share/${CHIRPSTACK__ENVIRONMENT}-gbgrp/${CHIRPSTACK__ENVIRONMENT}/eu868/gateway/{{ .GatewayID }}/command/#
+      - CHIRPSTACK__HOSTNAME=${CHIRPSTACK_HOSTNAME}
+      - CHIRPSTACK__ENVIRONMENT=${CHIRPSTACK_ENVIRONMENT} # or dev/prod; MUST exist for GB
+      - INTEGRATION__MQTT__SERVER=tcp://mosquitto:1883 # <- broker for GB
+      - INTEGRATION__MQTT__CLIENT_ID=gb-${CHIRPSTACK_ENVIRONMENT}-${CHIRPSTACK_HOSTNAME}
+      - INTEGRATION__MQTT__EVENT_TOPIC_TEMPLATE=${CHIRPSTACK_ENVIRONMENT}/us915_1/gateway/{{ .GatewayID }}/event/{{ .EventType }}
+      - INTEGRATION__MQTT__STATE_TOPIC_TEMPLATE=${CHIRPSTACK_ENVIRONMENT}/us915_1/gateway/{{ .GatewayID }}/state/{{ .StateType }}
+      - INTEGRATION__MQTT__COMMAND_TOPIC_TEMPLATE=$$share/${CHIRPSTACK_ENVIRONMENT}-gbgrp/${CHIRPSTACK_ENVIRONMENT}/us915_1/gateway/{{ .GatewayID }}/command/#
     depends_on:
       - mosquitto
 
